--- a/www/blog/2021-05-06.md
+++ b/www/blog/2021-05-06.md
@@ -3,12 +3,14 @@ slug: securing-swa
 title: "#05: Securing SWA"
 authors: [mitali, nitya]
 tags: [swa, 30days, core-concepts]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 1, Day 5` of **#30DaysOfSWA**!! 
 
-Yesterday we looked at the different configuration files and properties available to us, to customize our application behaviors and build workflows with Azure Static Web Apps. Today we'll explore the exciting topic of **Security** in Static Web Apps - from authenticating users, to accessing authenticated user information, managing user roles, and authorizing access based on that role.
+So far, we've learnt to build/deploy a basic web app, add a serverless API endpoint and customize the configuration settings for both application behaviors and build workflows. But we forgot one thing - the **user**! To create _differentiated_ experiences for users, we need ways to **identify them** and **understand their role** in the application context. We can then use that information to **manage user access to application features** (role-based authorization) as well as **application access to user information** (once authenticated).
+
+Thankfully, Azure Static Web Apps makes this fairly painless. Let's see how.
 
 
 ## What We'll Cover
@@ -23,22 +25,73 @@ Yesterday we looked at the different configuration files and properties availabl
 
 
 ## Securing SWA
-`TODO`: 
+
+What does it mean to _secure_ a Static Web App? It's three things:
+ * **Knowing User Identity** - Having a way to determine the identity of the user using an authentication service or provider.
+ * **Knowing User Roles** - Understanding what persona the user is taking on when (using the application), and customizing the experience accordingly.
+ * **Managing User Access** - Making sure the authenticaton information is seamlessly accessible to all SWA components, allowing them to enforce rules that allow only authorized users or roles to access resources.
+
+Let's dive into the three concepts that tackle these needs: **Authentication**, **Role Assignment** and **Role-Based Authorization**.
 
 ## Managed Auth
-`TODO`: 
+
+Azure Static Web Apps comes with a default **streamlined authentication experience** that supports:
+ * _pre-configured providers_: Twitter, GitHub, Azure Active Directory
+ * _pre-assigned roles_: anonymous (guest) or authenticated (on login)
+ * _customizable rules_: defined for routes, in `staticwebapps.config.json`
+
+All pre-configured providers are active by default, with their own pre-defined API endpoints for [Login](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#login), and a shared API endpoint for [Logout](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#logout). 
+ * Want to block a specific pre-configured provider? Just [add a blocking rule](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#block-an-authentication-provider) to their login route to ensure no user is allowed access to it.
+ * Want to send users to custom pages after successful or failed login attempts? Use [query parameters and route rules](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#post-login-redirect) to make this work.
+
+This is the default _managed authentication_ experience. But what if you want more flexibility with the registration process (used by a pre-configured provider) or want to add a new one (custom provider)?
 
 ## Custom Auth 
-`TODO`: 
+
+This is where _custom authentication_ options come in. 
+
+You can [configure custom providers](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=aad#configure-a-custom-identity-provider) if they support the [OpenID Connect](https://openid.net/connect/) standard. By configuring at least one custom provider, you are effectively disabling the pre-configured provider options.
+
+How do you configure them? Just add the provider's configuration information to the `auth` section of the `staticwebapps.config.json` file. Check out [the documentation](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#configure-a-custom-identity-provider) for the relevant configuration properties defined for custom providers like _Apple_, _Facebook_, _Google_ etc. **This is also a good example for using Application Settings (environment variables)** for representing sensitive configuration information in a privacy-preserving way.
+
+Azure Static Web Apps makes custom registrations easy by providing standard route patterns for [_Login_, _Logout_ and _User Profile_](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#authentication-callbacks) requests, as well as [redirect URLs](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#authentication-callbacks) for authentication callbacks (from the custom provider) on login/logout.
 
 ## User Roles
-`TODO`: 
+
+There are three key concepts you need to know in this context:
+ * Every Static Web Apps user has one or more roles assigned to them.
+ * There are 2 built-in roles ("anonymous" and "authenticated")
+ * You can define custom roles & assign users by-invite or by-function.
+
+Let's review these quickly. 
+
+ * All users accessing a Static Web App are in an _anonymous_ role (guest) until authenticated by a pre-configured or custom provider.
+ * Once authenticated, they have an _authenticated_ role but can now be _assigned custom roles_ by invitation (proactive) or by function (reactive)
+ * **Proactive invitations** can be configured and sent from the Azure Portal, using provider-specific email addresses for the user. Users now click on the invite link to login with that custom role assigned automatically.
+ * **Reactive functions** defer assignment to post-login, using an Azure Function that dynamically returns an assigned role (or roles) to the user on being given the authenticated user details.
+
+The latter approach offers more flexibility, allowing you to use the function handler to invoke another service (like [Microsoft Graph](https://developer.microsoft.com/graph)) to make the role-assignment decision for you. Read [**Role Management**](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=function#role-management) for more details - including steps to update role assignments or remove users from a role.
+
 
 ## Role-Based Auth
-`TODO`: 
+
+Once the user has been assigned a role, _managing user access_ based on that assignment becomes easy using the built-in support for [routing rules](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#routes) based on the **allowedRoles** property attached to each `route`. For example, the following configuration setting (in `staticwebapps.config.json`) would restrict access to all routes that start with `/profile*` to _only authenticated users_.
+)
+
+```
+{
+  "route": "/profile*",
+  "allowedRoles": ["authenticated"]
+}
+```
+
+Read more about [securing routes with rules](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#securing-routes-with-roles) to understand various usage scenarios and configuration settings to enforce them.
 
 ## Access User Info
-`TODO`: 
+
+One of the benefits of Azure Static Web Apps' seamless integration of application and API capabilities is that [authenticated user information can be accessed transparently](https://docs.microsoft.com/en-us/azure/static-web-apps/user-information?tabs=javascript) in two ways:
+ * Using a [direct access endpoint](https://docs.microsoft.com/en-us/azure/static-web-apps/user-information?tabs=javascript#direct-access-endpoint) at `/.auth/me` that is automatically provisioned with the user's information when authenticated.
+ * Using [API functions](https://docs.microsoft.com/en-us/azure/static-web-apps/user-information?tabs=javascript#api-functions) with a `fetch` call to the `/api/xxx` endpoint, where `xxx` is a named function you implement to return user information. 
 
 
 ---
